// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`target resources actions should fetch target clusters and return PENDING and FULFILLED action 1`] = `
Array [
  Object {
    "type": "FETCH_V2V_TARGET_CLUSTERS_PENDING",
  },
  Object {
    "type": "FETCH_V2V_TARGET_CLUSTERS_FULFILLED",
  },
]
`;

exports[`target resources actions should fetch target clusters and return PENDING and REJECTED action 1`] = `
Array [
  Object {
    "type": "FETCH_V2V_TARGET_CLUSTERS_PENDING",
  },
  Object {
    "error": true,
    "payload": [Error: <mocked error>],
    "type": "FETCH_V2V_TARGET_CLUSTERS_REJECTED",
  },
]
`;
